fix image on tablet device

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     max-width: 100%;
 }
+
 body {
     font-family: 'Plus Jakarta Sans';
     font-style: normal;
@@ -14,45 +15,56 @@ body {
     background: linear-gradient(180deg, #FFFFFF 0%, #F0F1FF 100%);
 
 }
+
 main {
     padding: 0px 16px 0px 16px;
     width: 375px;
 }
-#image_hero_tablet, #image_hero_desktop{
+
+#image_hero_tablet,
+#image_hero_desktop {
     display: none;
 }
-header, footer {
+
+header,
+footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 375px;
     padding: 16px 16px 0px 16px;
 }
+
 .logo {
     font-weight: 800;
     font-size: 28px;
     line-height: 35px;
 }
+
 #logo_dark {
     color: #13183F;
 }
-#logo_light{
+
+#logo_light {
     color: #FFFFFF
-} 
+}
+
 button {
     font-weight: 700;
     font-size: 16px;
     line-height: 28px;
     color: #FFFFFF;
-    cursor: pointer; 
+    cursor: pointer;
     border: none;
 }
+
 #button_1 {
     background-color: #13183F;
     width: 140px;
     height: 48px;
-    border-radius: 28px;   
+    border-radius: 28px;
 }
+
 #button_1:hover {
     background-color: #666CA3;
 }
@@ -70,6 +82,7 @@ h1 {
     line-height: 50px;
     color: #13183F;
 }
+
 .caption {
     font-weight: 500;
     font-size: 16px;
@@ -77,18 +90,22 @@ h1 {
     color: #83869A;
     margin: 16px 0px 24px 0px;
 }
-#main_caption{
+
+#main_caption {
     margin-top: 26px;
 }
+
 #button_2 {
     width: 167px;
     height: 56px;
     border-radius: 31.5px;
     background: linear-gradient(180deg, #FF6F48 0%, #F02AA6 100%);
 }
+
 #button_2:hover {
     background: linear-gradient(0deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), linear-gradient(180deg, #FF6F48 0%, #F02AA6 100%);
 }
+
 #image_hero_box {
     width: 327px;
     margin: 0 auto;
@@ -103,6 +120,7 @@ h1 {
     grid-template-columns: auto;
     row-gap: 40px;
 }
+
 .course {
     width: 343px;
     padding: 0px 29px 32px 28x;
@@ -111,35 +129,42 @@ h1 {
     position: relative;
     padding: 56px 0px 32px 28px;
 }
+
 h3 {
     font-weight: 800;
     font-size: 20px;
     line-height: 25px;
-    color: #13183F;                        
+    color: #13183F;
 }
-#course_table img{
+
+#course_table img {
     position: absolute;
     left: 28px;
     top: -24px;
 }
+
 .course_start {
     font-weight: 700;
     font-size: 18px;
     line-height: 28px;
-    color: #F74780; 
+    color: #F74780;
     cursor: pointer;
 }
-.course_start:hover{
+
+.course_start:hover {
     color: #FFA7C3;
 }
+
 .course_info {
-    width:  286px;
+    width: 286px;
 }
-#check_out{
+
+#check_out {
     background: linear-gradient(180deg, #FF6F48 0%, #F02AA6 100%);
     padding: 24px 0px 32px 28px;
 }
-h2{
+
+h2 {
     font-weight: 800;
     font-size: 24px;
     line-height: 32px;
@@ -148,22 +173,25 @@ h2{
 
 /* footer styling 
 ////////////////// */
-footer{
+footer {
     background-color: #13183F;
     height: 120px;
     margin-top: 80px;
 
 }
+
 #logo_light {
     color: #FFFFFF;
 }
+
 #button_3 {
     background: linear-gradient(180deg, #4851FF 0%, #F02AA6 100%);
-    border-radius: 28px;   
+    border-radius: 28px;
     width: 140px;
     height: 48px;
 }
-#button_3:hover{
+
+#button_3:hover {
     background: linear-gradient(0deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), linear-gradient(180deg, #4851FF -54.32%, #F02AA6 100%);
 }
 
@@ -171,40 +199,51 @@ footer{
 
 @media only screen and (min-width: 768px) {
 
-    main, header, footer {
+    main,
+    header,
+    footer {
         width: 768px;
         padding: 24px 40px 0px 39px;
     }
+
     article {
         margin-top: 75px;
         width: 398px;
     }
-    #image_hero_mobile{
+
+    #image_hero_mobile {
         display: none;
     }
+
     #course_table {
         grid-template-columns: auto auto;
         row-gap: 56px;
         column-gap: 10px;
         margin-top: 210px;
     }
+
     .course {
         padding-left: 32px;
     }
+
     #check_out {
         padding: 56px 21px 139px 32px;
-    } 
+    }
+
     footer {
         margin-top: 86px;
         padding-top: 0;
     }
+
     main {
         position: relative;
         /* overflow: hidden; */
     }
-    #all {
+
+    #backbone {
         overflow: hidden;
     }
+
     /* }
     #image_hero_box {
         margin: 0;
@@ -221,87 +260,108 @@ footer{
         width: 40rem;
         height: 40rem;
         z-index: -1;
-        top: -4.938rem;
+        top: -9.4rem;
         right: -17.188rem;
     }
 }
 
 /* Bellow styles will fit for windows */
-@media only screen and (min-width: 1440px){
-    main, footer, header {
+@media only screen and (min-width: 1440px) {
+
+    main,
+    footer,
+    header {
         width: 1440px;
         padding: 24px 165px 0px 165px;
     }
+
     .logo {
         font-size: 36px;
         line-height: 45px;
     }
+
     button {
         font-size: 18px;
     }
+
     #button_1 {
         width: 167px;
         height: 56px;
     }
+
     article {
         margin: 148px 0px 250px 0px;
         width: 457px;
         height: 359px;
     }
+
     h1 {
         font-size: 56px;
-        line-height: 71px;        
+        line-height: 71px;
     }
+
     .caption {
         font-size: 18px;
         margin: 24px 0px 24px 0px;
         line-height: 28px;
     }
+
     #main_caption {
         margin: 29px 0px 40px 0px;
     }
+
     #button_2 {
         width: 167px;
         height: 63px;
     }
-    #course_table{
+
+    #course_table {
         grid-template-columns: auto auto auto;
         margin: 0;
         row-gap: 80px;
         column-gap: 30px;
     }
+
     .course {
         width: 350px;
         height: 322px;
         padding: 64px 0px 40px 32px;
     }
-    h2{
+
+    h2 {
         font-size: 32px;
-        line-height: 40px;        
+        line-height: 40px;
     }
-    h3{
+
+    h3 {
         font-size: 24px;
-        line-height: 30px;        
+        line-height: 30px;
     }
+
     /* .course_start{
         margin-bottom: 40px;
     } */
     footer {
         margin-top: 140px;
     }
+
     #button_3 {
         width: 167px;
         height: 56px;
     }
+
     .more_margin {
         margin-bottom: 52px;
     }
-    #image_hero_tablet{
+
+    #image_hero_tablet {
         display: none;
     }
+
     main {
         position: relative;
     }
+
     #image_hero_desktop {
         display: block;
         position: absolute;
@@ -312,4 +372,3 @@ footer{
         left: 750px;
     }
 }
-
